# SoftRenderQt

./: CMakeLists.txt  README.md  main.cpp  myLabel.cpp  myLabel.h  ui_viewclass.h  viewclass.cpp  viewclass.h  viewclass.ui
core/: camera.cpp  camera.h  macro.h  maths.cpp  maths.h  model.hpp  pipeline.cpp  pipeline.h  scene.cpp  scene.h  triangle.cpp  triangle.h
shader/: blinn_phong_shader.cpp  blinn_phong_tangent_shader.cpp  pbr_shader.cpp  shader.h  skybox_shader.cpp
